fixed the by Fani button and the footer

--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
         <nav class="nav">
           <ul class="nav__list">
             <li class="nav__item">
-              <!-- <button class="nav__btn nav__btn--add-recipe">
-                <svg class="nav__icon">
+              <button class="nav__btn nav__btn--add-recipe">
+                <!-- <svg class="nav__icon">
                   <use href="src/img/icons.svg#icon-edit"></use>
                 </svg> -->
                 <span>By Fani</span>
               </button>
-            </li> 
+            </li>
             <li class="nav__item">
               <button class="nav__btn nav__btn--bookmarks">
                 <svg class="nav__icon">
@@ -129,9 +129,8 @@
             class="twitter-link"
             target="_blank"
             href="https://twitter.com/jonasschmedtman"
-            >Jonas Schmedtmann</a
-          >. Use for learning or your portfolio. Don't use to teach. Don't claim
-          as your own.
+            >Fani Keorapetse</a
+          >.
         </p>
       </div>
 
